# Aizo

./: AlgorithmTests.cpp  AlgorithmTests.h  CMakeLists.txt  FileController.cpp  FileController.h  FileReader.cpp  FileReader.h  RandomArrayGenerator.cpp  RandomArrayGenerator.h  SortingMethods.h  UserInterface.cpp  UserInterface.h  main.cpp  tableRanges.txt
sortingAlgorithm/: HeapSort.h  InsertionSort.h  QuickSort.h  ShellSort.h  Sort.h
